--- a/app/gradle/libs.versions.toml
+++ b/app/gradle/libs.versions.toml
@@ -12,6 +12,9 @@ datastorePreferences = "1.1.1"
 koin = "4.0.1"
 retrofit = "2.11.0"
 okhttp3 = "4.12.0"
+credentials = "1.3.0"
+googleIdentity = "1.1.1"
+coil = "2.7.0"
 
 # Plugins
 agp = "8.6.1"
@@ -42,6 +45,10 @@ retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-
 okhttp3-urlconnection = { group = "com.squareup.okhttp3", name = "okhttp-urlconnection", version.ref = "okhttp3" }
 kotlin-collections-immutable = { group = "org.jetbrains.kotlinx", name = "kotlinx-collections-immutable", version.ref = "kotlinCollectionsImmutable" }
 kotlin-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
+credentials-core = { group = "androidx.credentials", name = "credentials", version.ref = "credentials" }
+credentials-play-services-auth = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentials" }
+google-identity = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleIdentity" }
+coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
