--- a/back-end/gradle/libs.versions.toml
+++ b/back-end/gradle/libs.versions.toml
@@ -3,6 +3,8 @@ koin = "3.5.6"
 kotlin = "2.1.0"
 ktor = "3.0.3"
 logback = "1.4.14"
+googleApiClient = "2.7.1"
+mongodbDriver = "5.3.0"
 
 [libraries]
 ktor-server-call-logging = { module = "io.ktor:ktor-server-call-logging", version.ref = "ktor" }
@@ -20,6 +22,8 @@ kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version
 koin-ktor = { module = "io.insert-koin:koin-ktor", version.ref = "koin" }
 koin-logger-slf4j = { module = "io.insert-koin:koin-logger-slf4j", version.ref = "koin" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
+google-api-client = { module = "com.google.api-client:google-api-client", version.ref = "googleApiClient" }
+mongodb-driver-kotlin = { module = "org.mongodb:mongodb-driver-kotlin-coroutine", version.ref = "mongodbDriver" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
