--- a/app/gradle/libs.versions.toml
+++ b/app/gradle/libs.versions.toml
@@ -10,8 +10,7 @@ navigationCompose = "2.8.5"
 serialization = "1.7.3"
 datastorePreferences = "1.1.1"
 koin = "4.0.1"
-retrofit = "2.11.0"
-okhttp3 = "4.12.0"
+ktor = "3.0.3"
 credentials = "1.3.0"
 googleIdentity = "1.1.1"
 coil = "2.7.0"
@@ -40,9 +39,11 @@ androidx-datastore = { group = "androidx.datastore", name = "datastore-preferenc
 koin-bom = { group = "io.insert-koin", name = "koin-bom", version.ref = "koin" }
 koin-android = { group = "io.insert-koin", name = "koin-android" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose" }
-retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
-retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
-okhttp3-urlconnection = { group = "com.squareup.okhttp3", name = "okhttp-urlconnection", version.ref = "okhttp3" }
+ktor-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-engine = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 kotlin-collections-immutable = { group = "org.jetbrains.kotlinx", name = "kotlinx-collections-immutable", version.ref = "kotlinCollectionsImmutable" }
 kotlin-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
 credentials-core = { group = "androidx.credentials", name = "credentials", version.ref = "credentials" }
