--- a/app/gradle/libs.versions.toml
+++ b/app/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ ktor = "3.0.3"
 credentials = "1.3.0"
 googleIdentity = "1.1.1"
 coil = "2.7.0"
+workmanager = "2.10.0"
 
 # Plugins
 agp = "8.6.1"
@@ -39,6 +40,7 @@ androidx-datastore = { group = "androidx.datastore", name = "datastore-preferenc
 koin-bom = { group = "io.insert-koin", name = "koin-bom", version.ref = "koin" }
 koin-android = { group = "io.insert-koin", name = "koin-android" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose" }
+koin-workmanager = { group = "io.insert-koin", name = "koin-androidx-workmanager" }
 ktor-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-engine = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
@@ -50,6 +52,7 @@ credentials-core = { group = "androidx.credentials", name = "credentials", versi
 credentials-play-services-auth = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentials" }
 google-identity = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleIdentity" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+workmanager = { module = "androidx.work:work-runtime", version.ref = "workmanager" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
