--- a/app/gradle/libs.versions.toml
+++ b/app/gradle/libs.versions.toml
@@ -23,10 +23,11 @@ mockk = "1.13.16"
 # Plugins
 agp = "8.6.1"
 kotlin = "2.0.20"
+coreKtxVersion = "1.6.1"
 
 [libraries]
+core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "coreKtxVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
